cmake_minimum_required (VERSION 3.1)
project (CALC)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(ENV{CALC_SITE_HOME} "${CMAKE_BINARY_DIR}")
message("$ENV{CALC_SITE_HOME}")
add_subdirectory (com)
add_subdirectory (svr)
add_subdirectory (cli)
add_subdirectory(fmt)